I created the portfolio page using the bootstrap grid system. However, the images were overlapping before responding to breakpoint 768px so I added a media query to the css adding 1px of margin to the right of their column.I hope to find a better way to fix this issue before my next commit.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,9 +24,16 @@ main {
 }
 
 .project {
-    width: 350px;
+    height: 300px;
+    width: 300px;
 }
 
 .footer-copyright {
     color: white;
+}
+
+@media only screen and (max-width: 768px) {
+    .tricky {
+        margin-right: 1px;
+    }
 }
